[package]
name = "sgx_tdh"
version = "1.0.9-preview"
authors = ["Baidu"]
repository = "https://github.com/baidu/rust-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
name = "sgx_tdh"
crate-type = ["rlib"]


[features]
default = []
use_lav2 = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../sgx_types" }
sgx_trts = { path = "../sgx_trts" }
sgx_tcrypto = { path = "../sgx_tcrypto" }
sgx_tse = { path = "../sgx_tse" }
