[package]
name = "sgx_tdh"
version = "1.1.1"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
name = "sgx_tdh"
crate-type = ["rlib"]


[features]
default = []
use_lav2 = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = "=1.1.1"
sgx_trts = "=1.1.1"
sgx_tcrypto = "=1.1.1"
sgx_tse = "=1.1.1"
