[package]
name = "sgx_tseal"
version = "0.9.6"
authors = ["Baidu"]

[lib]
name = "sgx_tseal"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
sgx_types = { path = "../sgx_types" }
sgx_trts = { path = "../sgx_trts" }
sgx_tcrypto = { path = "../sgx_tcrypto" }
sgx_tse = { path = "../sgx_tse" }
