[package]
name = "sgx_tseal"
version = "1.0.0"
authors = ["Baidu"]
repository = "https://github.com/baidu/rust-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."

include = [
    "LICENSE",
    "Readme.md",
    "Cargo.toml",
    "src/seal.rs",
    "src/aad.rs",
    "src/internal.rs",
    "src/lib.rs",
]

[lib]
name = "sgx_tseal"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
sgx_types = { path = "../sgx_types" }
sgx_trts = { path = "../sgx_trts" }
sgx_tcrypto = { path = "../sgx_tcrypto" }
sgx_tse = { path = "../sgx_tse" }
